--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "5.2.1",
+    "@rails/webpacker": "rails/webpacker#b6c2180",
+    "autoprefixer": "^10.2.4",
     "jquery": "^3.5.1",
+    "postcss": "^8.2.4",
+    "tailwindcss": "^2.0.2",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
